--- a/sass/baseline/textSizes.variables.scss
+++ b/sass/baseline/textSizes.variables.scss
@@ -1,6 +1,4 @@
-/*===== 
-    #LineHeight 
-=====*/
+
 $baseLineHeight: 1.618;
 $smallLineHeight: 1.2;
 
@@ -10,9 +8,7 @@ $lineHeightVarMap: (
 );
 
 $baseFontSize: 1rem;
-/*===== 
-    #Body #Size #Paragraph #content-flow
-=====*/
+
 $baseTextSize: 1 * $baseFontSize;
 $biggestTextSize:  1.3 * $baseTextSize;
 $biggerTextSize: 1.2 * $baseTextSize;
@@ -31,13 +27,8 @@ $textSizeVarMap: (
     "smallestTextSize": $smallestTextSize,
 );
 
-/*===== 
-    #Heading #Title #Size
-    The small title sizes use the big text sizes; so they overlap
-    They're here, though, so that, if desired, we can deviate and not have them overlap
-=====*/
 $baseTitleSize: 1.5em;
-$biggestTitleSize: 2.617924em; /* (16 x 1.618) x 1.618 */
+$biggestTitleSize: 2.617924em;
 $bigTitleSize: 1.618em;
 $smallTitleSize: $biggestTextSize;
 $smallerTitleSize: $biggerTextSize;
