adds tests for sassOrCSSVar and makes it unit-testable

--- a/sass/baseline/_baseline-mixin.scss
+++ b/sass/baseline/_baseline-mixin.scss
@@ -60,9 +60,7 @@ $variableMapsList: (
 
 
 
-@function sassOrCssVar($varName) {
-    $needsCssVar: _baselineInclude(cssVariables);
-    $allVariablesMap: getAllVariablesMap();
+@function sassOrCssVar($varName, $needsCssVar: _baselineInclude(cssVariables), $allVariablesMap: getAllVariablesMap()) {
 
     @if $needsCssVar {
         $cssVar: string.insert('--', $varName, 100);
