Adds variables from original

--- a/sass/_baseline.scss
+++ b/sass/_baseline.scss
@@ -1,4 +1,8 @@
 @import 'baseline/colors.variables';
 @import 'baseline/textSizes.variables';
 @import 'baseline/families.variables';
+@import 'baseline/spacing.variables';
+@import 'baseline/fontStyles.variables';
+@import 'baseline/quotes.variables';
+@import 'baseline/interactions.variables';
 @import 'baseline/baseline-mixin';
