--- a/sass/baseline/_baseline-mixin.scss
+++ b/sass/baseline/_baseline-mixin.scss
@@ -164,8 +164,9 @@ $variableMapsList: (
 
         ul,
         ol,
-        dl {
-            padding: sassOrCssVar(baseSpacingVertical) sassOrCssVar(baseSpacingHorizontal); /* Comment-A */
+        dl,
+        menu {
+            padding: sassOrCssVar(baseSpacingVertical) sassOrCssVar(baseSpacingHorizontal);
         }
 
         li {
@@ -233,10 +234,9 @@ $variableMapsList: (
         */
         blockquote {
             background: rgba(165, 165, 165, .15);
-            border-left: 10px solid sassOrCssVar(colorNeutralLighter);
-            margin: 1.618em .618rem; /* Comment-A */
-            padding: 0.618em .618rem;
-            quotes: "\201C""\201D""\2018""\2019";
+            border-left: sassOrCssVar(baseQuoteBorder);
+            margin: sassOrCssVar(bigSpacingVertical) sassOrCssVar(baseSpacingHorizontal);
+            padding: sassOrCssVar(baseSpacingVertical) sassOrCssVar(baseSpacingHorizontal);
         }
 
         blockquote::before,
@@ -282,8 +282,8 @@ $variableMapsList: (
         }
 
         u {
-            text-decoration: none;
-            border-bottom: 1px dotted red;
+            text-decoration: sassOrCssVar(idleTextDecoration);
+            text-decoration-color: sassOrCssVar(alertTextLineColor);
         }
 
         small,
@@ -316,7 +316,7 @@ $variableMapsList: (
         s,
         strike,
         del {
-            text-decoration: strikethrough;
+            text-decoration: line-through;
         }
 
         ins,
